# apis-relations-poc

./: README.md  pyproject.toml
apis_relations2/: apps.py  fields.py  forms.py  models.py  signals.py  tables.py  urls.py  utils.py  views.py
apis_relations2/migrations/: 0001_initial.py  0002_relation_metadata.py  0003_alter_relation_metadata.py
apis_relations2/templates/: partial.html  relation_detail.html  relations_list.html
apis_relations2/templates/partials/: relation_from_instance.html  relations_forms.html  relations_links.html  relations_table.html
apis_relations2/templates/relations/: list.html  partial.html  relation.html
apis_relations2/templates/tables/: delete.html
apis_relations2/templates/templatetags/: relations_links.html
apis_relations2/templatetags/: relations.py
