[tool.poetry]
name = "apis-relations"
version = "0.1.0"
description = ""
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
readme = "README.md"
packages = [{include = "apis_relations"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
